[project]
name = "peek2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "mss>=10.0.0",
    "nest-asyncio>=1.6.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "toml>=0.10.2",
    "winrt-windows-media-control>=3.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
